--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera"div>
+                cabecera
             <div id="post">
                 <h1>Este es el título
                 atractivo e interesante del 
