--- a/blogpost.html
+++ b/blogpost.html
@@ -5,8 +5,12 @@
     </head>
     <body>
         <div id="container">
-            <div id="cabecera"div>
-                cabecera
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">
+                    Tu blog de confianza
+                </span>
+            </div>    
             <div id="post">
                 <h1>Este es el título
                 atractivo e interesante del 
