--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo " src="imagen/html5.png">
                 Hyperblog
                 <span id="tagline">
                     Tu blog de cabecera
