--- a/blogpost.html
+++ b/blogpost.html
@@ -34,7 +34,9 @@
             </div>
         </div>
         </div>
-        
+        <div id="footer">
+            Hecho con amor en Platzi 
+        </div>
         
     </body>
 
