--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo " src="imagen/html5.png">
                 Hyperblog
                 <span id="tagline">
                     Tu blog de cabecera
@@ -19,26 +20,24 @@
                 inicio donde vamos a explicar 
                 las cosas increibles que se 
                 pueden ahcer con ramas</p>
-                <p>Los blogs son la mejor 
-                forma de compartir
-                información y tus ideas.
-                Mucho mas que ir a 
-                conferencias o salir en 
-                Yotube. Excepto si eres un 
-                rockstar. Pero
-                estadísticamente no lo 
-                eres... por ahora.</p>
-                <p>Suscribete y dale like
-                    
+                <p>
+                    Los blogs son la mejor 
+                    forma de compartir
+                    información y tus ideas.
+                    Mucho mas que ir a 
+                    conferencias o salir en 
+                    Yotube. Excepto si eres un 
+                    rockstar. Pero
+                    estadísticamente no lo 
+                    eres... por ahora.
+                </p>
+                <p>
+                    Suscribete y dale like
                 </p>
             </div>
-        </div>
-        </div>
-        <div id="footer">
-            Hecho con amor en Platzi 
-        </div>
-        
+            <div id="footer">
+                Hecho con amor en Platzi 
+            </div>
+        </div>    
     </body>
-
-
-</html>
+    </html>
