--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
                 inicio donde vamos a explicar 
                 las cosas increibles que se 
                 pueden ahcer con ramas</p>
+                <p><img src="imagen/equipo.jpg" width="100%" /></p>
                 <p>
                     Los blogs son la mejor 
                     forma de compartir
